# coreflow

./: .bazelrc  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  BUILD  COPYRIGHT  LICENSE  LICENSE.md  MODULE.bazel  README.md  WORKSPACE  generate_xml.py  test_vx_conformance.sh
.github/workflows/: ci.yml  code_quality.yml  codeql.yml  cppcheck.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  ui.yml
build_tools/: cuda_defs.bzl  custom_repos.bzl
docs/: Doxyfile  DoxygenLayout.xml  api_overview.md  examples.md  expand-all-sidebar.js  footer.html  header.html  install.md  openvx-examples.md  openvx.md
docs/format/: DoxygenLayout.xml  custom-sidebar-links.js  doxygen-awesome-interactive-toc.js  doxygen-awesome.css  expand-current-section.js  footer.html  header.html
framework/include/: vx_array.h  vx_context.h  vx_convolution.h  vx_debug.h  vx_delay.h  vx_distribution.h  vx_error.h  vx_event_queue.hpp  vx_graph.h  vx_image.h  vx_import.h  vx_inlines.h  vx_internal.h  vx_kernel.h  vx_log.h  vx_lut.h  vx_matrix.h  vx_memory.h  vx_meta_format.h  vx_node.h  vx_object_array.h  vx_osal.h  vx_parameter.h  vx_pyramid.h  vx_reference.h  vx_remap.h  vx_scalar.h  vx_target.h  vx_tensor.h  vx_threshold.h  vx_type_pairs.h  vx_user_data_object.h  vx_xml.h
framework/src/: vx_array.cpp  vx_context.cpp  vx_convolution.cpp  vx_debug.cpp  vx_delay.cpp  vx_distribution.cpp  vx_dot.cpp  vx_error.cpp  vx_event_queue.cpp  vx_graph.cpp  vx_graph_pipeline.cpp  vx_graph_stream.cpp  vx_helper.cpp  vx_image.cpp  vx_import.cpp  vx_inlines.cpp  vx_ix_export.cpp  vx_ix_import.cpp  vx_kernel.cpp  vx_khr_import_kernel.cpp  vx_log.cpp  vx_lut.cpp  vx_matrix.cpp  vx_memory.cpp  vx_meta_format.cpp  vx_node.cpp  vx_node_api.cpp  vx_node_nn_api.cpp  vx_object_array.cpp  vx_osal.cpp  vx_parameter.cpp  vx_pyramid.cpp  vx_reference.cpp  vx_remap.cpp  vx_scalar.cpp  vx_target.cpp  vx_tensor.cpp  vx_threshold.cpp  vx_type_pairs.c  vx_type_pairs.cpp  (+3 more)
include/COREFLOW/: circular_queue.hpp  execution_queue.hpp
include/COREVX/: all.hpp  circular_queue.hpp  execution_queue.hpp
include/VX/: vx.h  vx_api.h  vx_corevx_ext.h  vx_helper.h  vx_import.h  vx_kernels.h  vx_khr_buffer_aliasing.h  vx_khr_class.h  vx_khr_dot.h  vx_khr_icd.h  vx_khr_interp.h  vx_khr_nn.h  vx_khr_opencl.h  vx_khr_opencl_interop.h  vx_khr_pipelining.h  vx_khr_tiling.h  vx_khr_user_data_object.h  vx_khr_xml.h  vx_lib_debug.h  vx_lib_extras.h  vx_lib_xyz.h  vx_types.h
include/windows/: stdint.h
kernels/NNEF-Tools/: requirements.txt
kernels/ai_server/: BUILD  chatbot.hpp
kernels/c_model/: BUILD  c_absdiff.cpp  c_accumulate.cpp  c_addsub.cpp  c_bilateral_filter.cpp  c_bitwise.cpp  c_channel.cpp  c_controlflow.cpp  c_conv3x3.cpp  c_convertcolor.cpp  c_convertdepth.cpp  c_convolve.cpp  c_copy.cpp  c_fast9.cpp  c_filter.cpp  c_histogram.cpp  c_hog.cpp  c_houghlinesp.cpp  c_integralimage.cpp  c_khr_nn.cpp  c_lbp.cpp  c_lut.cpp  c_magnitude.cpp  c_matchtemplate.cpp  c_minmax.cpp  c_model.h  c_morphology.cpp  c_multiply.cpp  c_nonlinearfilter.cpp  c_nonmaxsuppression.cpp  c_optpyrlk.cpp  c_phase.cpp  c_scale.cpp  c_sobel3x3.cpp  c_statistics.cpp  c_tensor_lut.cpp  c_tensor_transpose.cpp  c_threshold.cpp  c_warp.cpp  c_weighted_average.cpp  (+1 more)
kernels/debug/: BUILD  d_copy.cpp  d_file.cpp
kernels/executorch/: BUILD  torch.hpp
kernels/extras/: BUILD  e_filter.c  e_filter.cpp  e_nonmax.cpp
kernels/liteRT/: BUILD  tflite.hpp
kernels/nnef/: BUILD
kernels/onnxRT/: BUILD  ort_runner.hpp
kernels/opencl/: vx_warp_affine.cl  vx_warp_perspective.cl
kernels/tiling/: BUILD  tiling.h  tiling_absdiff.cpp  tiling_addsub.cpp  tiling_bitwise.cpp  tiling_channel.cpp  tiling_convertcolor.cpp  tiling_convertdepth.cpp  tiling_convolve.cpp  tiling_fast9.cpp  tiling_filter.cpp  tiling_hog.cpp  tiling_houghlinesp.cpp  tiling_integralimage.cpp  tiling_lbp.cpp  tiling_lut.cpp  tiling_magnitude.cpp  tiling_morphology.cpp  tiling_multiply.cpp  tiling_nonlinearfilter.cpp  tiling_nonmaxsuppression.cpp  tiling_phase.cpp  tiling_scale.cpp  tiling_sobel3x3.cpp  tiling_threshold.cpp  tiling_warp.cpp
kernels/utils/: BUILD  conversion_utils.cpp  tensor_utils.cpp  tensor_utils.h
kernels/venum/: BUILD  venum.h  venum_absdiff.cpp  venum_addsub.cpp  venum_bilateral_filter.cpp  venum_bitwise.cpp  venum_channel.cpp  venum_convertcolor.c  venum_convertcolor.cpp  venum_convertdepth.c  venum_convertdepth.cpp  venum_convolve.cpp  venum_copy.cpp  venum_fast9.cpp  venum_filter.cpp  venum_gaussian5x5.cpp  venum_histogram.cpp  venum_hog.cpp  venum_houghlinesp.cpp  venum_integralimage.cpp  venum_lbp.cpp  venum_lut.cpp  venum_magnitude.c  venum_magnitude.cpp  venum_matchtemplate.c  venum_matchtemplate.cpp  venum_minmax.cpp  venum_morphology.cpp  venum_multiply.cpp  venum_nonlinearfilter.cpp  venum_nonmaxsuppression.cpp  venum_phase.cpp  venum_scale.cpp  venum_sobel3x3.c  venum_sobel3x3.cpp  venum_statistics.cpp  venum_tensor_lut.c  venum_tensor_lut.cpp  venum_tensor_multiply_matrix.cpp  venum_tensor_op.cpp  (+4 more)
samples/: README.md
samples/bubble-pop/: BUILD  README.md
samples/canny-edge-detector/: BUILD  README.md
samples/corevx_cpp/: BUILD  blur_pipeline.cpp  chatbot_sample.cpp  custom_code.cpp  hello_world.cpp  ort_classification_sample.cpp
samples/opencv_orb/: BUILD  orb.cpp
samples/optical_flow/: BUILD  README.md
samples/orb/: BUILD  README.md  orb.cpp
samples/skin-tone-detector/: BUILD  README.md
targets/ai_server/: BUILD  vx_chatbot.cpp  vx_interface.cpp  vx_interface.h
targets/c_model/: BUILD  vx_absdiff.cpp  vx_accumulate.cpp  vx_addsub.cpp  vx_bilateral_filter.cpp  vx_bitwise.cpp  vx_canny.cpp  (+42 more)
tbd/: vx_import.c  vx_import.h  vx_ix_export.c  vx_ix_import.c  vx_khr_import_kernel.c  vx_matrix.h  vx_memory.h
tests/: BUILD  vx_tests.cpp  vx_xyz_module.cpp
tools/: BUILD  run_xml_graph.cpp
ui/: .firebaserc  README.md  firebase.json  pubspec.yaml
vxu/: BUILD  vx_utility.cpp
(+361 files in other folders)
